# Organic_GH_Analysis

./: LICENSE  README.md  pyproject.toml
data/interim/: OrganicCompoundGH.xlsx  README.md
data/processed/: README.md
data/raw/: BiomassHHV.xlsx  MIcelluloseTD.xlsx  NHOCompoundHS.xlsx  OrganicCompoundHS.xlsx  README.md
notebooks/: OrgGHAnalysis.ipynb  README.md  testing.ipynb
src/: README.md  README_chemutils_full.md
src/chemutils/: README.md  __init__.py  chem.py  io.py  plotting.py  stoi.py  thermo.py
tests/tests_chemutils/: conftest.py  test_plotting.py  test_stoi.py  test_thermo.py
