[project]
name = "chemutils"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24", 
    "pandas>=2.0", 
    "matplotlib>=3.7", 
    "scipy>=1.10"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]